Added error responses to get api/link{id} and updated openapi.yaml with the docimentation of this endpoint
